# TinyWhisperAgent

./: .cursorrules  .gitignore  Assistant_stt-Project-Scope.md  CLAUDE.md  README.md  image_gen.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core_docs/: currentTask.md  features_backlog.md  projectRoadmap.md  techStack.md
cursor_docs/: codebaseSummary.md  currentTask.md  techStack.md
whisper_transcription_tool/: __init__.py  audio.py  config.py  conversation.py  errors.py  image_gen.py  logger.py  processors.py  transcription.py
whisper_transcription_tool/cli/: __init__.py  main.py
